--- a/main.ui
+++ b/main.ui
@@ -1712,7 +1712,7 @@ p, li { white-space: pre-wrap; }
                              <string notr="true">
 #btnUpdate{
 
-background-color:#4673c6;
+background-color:#3c2d96;
 font: 75 12pt &quot;Arial&quot;;
 color:white;
 }
